fix: current user patch
